--- a/.github/workflows/malformed-template-labeler.yml
+++ b/.github/workflows/malformed-template-labeler.yml
@@ -11,4 +11,28 @@ jobs:
       - uses: actions/github-script@v4
         with:
           script: |
-            console.log(context)
+            console.log(context.issue)
+            
+            const labelsToCheck = ['bug', 'enhancement', 'question']
+            const labelsToIgnore = ['force-ignore-template']
+            
+            console.log('Checking if the issue can be ignored, specified by using the labels: ' + labelsToIgnore);
+            
+             if (labelsToIgnore.some(label => context.issue.labels.includes(label)) {
+              console.log('Issue has a label that it should be ignored');
+              
+              // Todo: Remove all comments
+              
+              return
+            }
+            
+            console.log('Will check for the following labels: ' + labelsToCheck)
+            
+            if (!labelsToCheck.some(label => context.issue.labels.includes(label)) {
+              console.log('Issue does not match any label; ignoring it');
+              
+              // Todo: Remove all comments
+              
+              return
+            }
+            
