--- a/.github/workflows/malformed-template-labeler.yml
+++ b/.github/workflows/malformed-template-labeler.yml
@@ -13,6 +13,7 @@ jobs:
         with:
           script: |
             console.log(context)
+            console.log(context.payload.issue.labels)
             
             const labelsToCheck = ['bug', 'enhancement', 'question']
             const labelsToIgnore = ['force-ignore-template']
