--- a/.github/workflows/malformed-template-labeler.yml
+++ b/.github/workflows/malformed-template-labeler.yml
@@ -19,13 +19,13 @@ jobs:
             const labelsToIgnore = ['force-ignore-template']
             const labelsToAddOnViolation = ['template-ignored']
             
-            const issueLabels = context.payload.issue.labels
+            const issueLabels = context.payload.issue.labels.map(i => i.name)
             
             console.log('Labels of current issue', issueLabels);
             
             console.log('Checking if the issue can be ignored, specified by using the labels', labelsToIgnore)
             
-            if (labelsToIgnore.some(label => issueLables.includes(label))) {
+            if (labelsToIgnore.some(label => issueLabels.includes(label))) {
               console.log('Issue has a label that it should be ignored');
               
               // Todo: Remove all comments
@@ -35,7 +35,7 @@ jobs:
             
             console.log('Will check for the following labels', labelsToCheck)
             
-            if (!labelsToCheck.some(label => issueLables.includes(label))) {
+            if (!labelsToCheck.some(label => issueLabels.includes(label))) {
               console.log('Issue does not match any label; ignoring it');
               
               // Todo: Remove all comments
