--- a/.github/workflows/malformed-template-labeler.yml
+++ b/.github/workflows/malformed-template-labeler.yml
@@ -49,7 +49,7 @@ jobs:
                   issue_number: context.issue.number,
                   owner: context.repo.owner,
                   repo: context.repo.repo,
-                  labels: labelsViolation
+                  labels: config.labelsViolation
                 })
               } else {
                 console.log('Label already exists')
