--- a/.github/workflows/malformed-template-labeler.yml
+++ b/.github/workflows/malformed-template-labeler.yml
@@ -38,7 +38,7 @@ jobs:
             
             const validationResult = isIssueValid(issueLabels, config)
             
-            echo('*** Manage label ***)
+            echo('*** Manage label ***')
             if(validationResult.valid) {
               console.log('Removing label')
               
@@ -66,7 +66,7 @@ jobs:
               }
             }
             
-            echo('*** Manage comment ***)
+            echo('*** Manage comment ***')
             if (validationResult.valid) {
               // Try to remove all comments from us
             } else {
@@ -88,6 +88,7 @@ jobs:
                 owner: context.repo.owner,
                 repo: context.repo.repo
               }));
+            
             
 
             function isIssueValid(issueLabels, config) {
