--- a/.github/workflows/malformed-template-labeler.yml
+++ b/.github/workflows/malformed-template-labeler.yml
@@ -38,7 +38,7 @@ jobs:
             
             const validationResult = isIssueValid(issueLabels, config)
             
-            echo('*** Manage label ***')
+            console.log('*** Manage label ***')
             if(validationResult.valid) {
               console.log('Removing label')
               
@@ -66,7 +66,7 @@ jobs:
               }
             }
             
-            echo('*** Manage comment ***')
+            console.log('*** Manage comment ***')
             if (validationResult.valid) {
               // Try to remove all comments from us
             } else {
